--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
       </div>
     </div>
     <script type="module" src="./js/components/Main.js"></script>
+    <script></script>
   </body>
 </html>
